# JiloScribe

./: .gitignore  pyproject.toml  run_backend.py
Frontend/: index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  index.css  main.tsx
src/: config.py  db.py  fastapi.py  job.py  model.py  router.py  type.py
src/intelligence/: extract_entities.py  llm.py  speaker_identifier.py  whisperx_transcribe.py
src/routes/: live_caption.py  pipeline.py  pipeline_model.py
